--- a/public/sushi.html
+++ b/public/sushi.html
@@ -4,33 +4,31 @@
   <meta charset="UTF-8">
   <title>Inventario Área Sushi 🍣</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; text-align: center; }
-    h2 { margin-bottom: 20px; }
-    .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.5); text-align: center; padding-top: 80px; z-index: 1000; }
-    .modal-content { background: white; margin: auto; padding: 20px; border-radius: 10px; width: 350px; }
-    input[type="number"], label { margin: 10px; font-size: 16px; }
-    button { padding: 10px 20px; margin: 10px; font-size: 16px; border: none; border-radius: 5px; cursor: pointer; }
-    button.guardar { background-color: #28a745; color: white; }
-    button.guardar:hover { background-color: #218838; }
-    button.capturar { background-color: #3498db; color: white; }
-    button.capturar:hover { background-color: #2980b9; }
-    table { width: 90%; margin: auto; margin-top: 30px; border-collapse: collapse; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    th { background: #f2f2f2; }
-    .footer { margin-top: 30px; font-size: 12px; color: gray; }
+    body {font-family: Arial, sans-serif; margin: 20px; text-align: center;}
+    h2 {margin-bottom: 20px;}
+    table {width: 95%; margin: auto; border-collapse: collapse; font-size: 15px;}
+    th, td {padding: 8px; border: 1px solid #ccc; text-align: center;}
+    th {background-color: #f2f2f2;}
+    input[type="number"], select {width: 80px; padding: 5px; font-size: 14px; border-radius: 4px; border: 1px solid #ccc;}
+    button {margin: 10px; padding: 10px 20px; font-size: 15px; background-color: #3498db; color: white; border: none; border-radius: 5px; cursor: pointer;}
+    button:hover {background-color: #2980b9;}
+    .mensaje {margin-top: 15px; font-size: 16px;}
+    .footer {margin-top: 30px; font-size: 12px; color: gray;}
+    .modal {display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); padding-top: 100px; z-index: 1000;}
+    .modal-content {background: white; margin: auto; padding: 20px; width: 300px; border-radius: 10px;}
   </style>
 </head>
 <body>
 
 <h2>Inventario Área Sushi 🍣</h2>
 
-<div id="modal" class="modal">
+<div id="modal-captura" class="modal">
   <div class="modal-content">
     <h3 id="nombre-articulo"></h3>
-    <input type="number" id="cantidad" placeholder="Cantidad" min="0" required><br>
-    <label><input type="checkbox" id="solicito"> Solicitó</label><br><br>
-    <button class="capturar" onclick="capturarDato()">Capturar</button>
+    <input type="number" id="input-cantidad" placeholder="Cantidad" min="0" autocomplete="off"><br><br>
+    <label><input type="checkbox" id="input-solicito"> Solicitó</label><br><br>
+    <button onclick="capturarArticulo()">Continuar</button>
+    <button onclick="cancelarCaptura()" style="background-color:#e74c3c;">Cancelar</button>
   </div>
 </div>
 
@@ -45,8 +43,12 @@
     </thead>
     <tbody id="tabla-articulos"></tbody>
   </table>
-  <button type="submit" class="guardar">Guardar Inventario</button>
+
+  <button type="submit" id="btn-guardar">Guardar Inventario</button>
+  <button type="button" onclick="cancelarCaptura()" style="background-color:#e74c3c;">Cancelar</button>
 </form>
+
+<div class="mensaje" id="mensaje"></div>
 
 <div class="footer">
   Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
@@ -61,111 +63,128 @@ const articulos = [
 ];
 
 const server = "https://inventario-horom-production.up.railway.app";
-let datosCapturados = [];
-let indexArticulo = 0;
-const modal = document.getElementById("modal");
+
+let indexActual = 0;
+let datosCapturados = {};
+
+const modal = document.getElementById("modal-captura");
 const nombreArticulo = document.getElementById("nombre-articulo");
-const cantidadInput = document.getElementById("cantidad");
-const solicitoCheck = document.getElementById("solicito");
-const tabla = document.getElementById("tabla-articulos");
+const inputCantidad = document.getElementById("input-cantidad");
+const inputSolicito = document.getElementById("input-solicito");
 
 function mostrarModal() {
-  if (indexArticulo >= articulos.length) {
-    modal.style.display = "none";
-    document.getElementById("formulario-sushi").style.display = "block";
-    cargarTabla();
-    return;
-  }
-  nombreArticulo.textContent = articulos[indexArticulo];
-  cantidadInput.value = "";
-  solicitoCheck.checked = false;
+  nombreArticulo.textContent = articulos[indexActual];
+  inputCantidad.value = "";
+  inputSolicito.checked = false;
   modal.style.display = "block";
+  inputCantidad.focus();
 }
 
-function capturarDato() {
-  const cantidad = cantidadInput.value.trim();
+function capturarArticulo() {
+  const cantidad = inputCantidad.value.trim();
+  const solicito = inputSolicito.checked ? "Si" : "No";
+
   if (cantidad === "") {
-    alert("❌ Debes capturar una cantidad antes de continuar.");
+    alert("❌ Captura una cantidad para continuar.");
+    inputCantidad.focus();
     return;
   }
-  datosCapturados.push({
-    articulo: articulos[indexArticulo],
-    cantidad: cantidad,
-    solicito: solicitoCheck.checked ? "Sí" : "No"
-  });
-  indexArticulo++;
-  mostrarModal();
+
+  datosCapturados[articulos[indexActual]] = `${cantidad} | Solicito: ${solicito}`;
+  indexActual++;
+
+  if (indexActual < articulos.length) {
+    mostrarModal();
+  } else {
+    modal.style.display = "none";
+    mostrarTabla();
+  }
 }
 
-function cargarTabla() {
+function mostrarTabla() {
+  const tabla = document.getElementById("tabla-articulos");
   tabla.innerHTML = "";
-  datosCapturados.forEach(dato => {
+  for (const [articulo, dato] of Object.entries(datosCapturados)) {
+    const [cantidad, solicito] = dato.split('|');
     tabla.innerHTML += `
       <tr>
-        <td>${dato.articulo}</td>
-        <td>${dato.cantidad}</td>
-        <td>${dato.solicito}</td>
+        <td>${articulo}</td>
+        <td><input type="number" value="${cantidad.trim()}" onchange="editarDato('${articulo}', this.value, null)"></td>
+        <td><input type="checkbox" ${solicito.includes('Si') ? 'checked' : ''} onchange="editarDato('${articulo}', null, this.checked)"></td>
       </tr>
     `;
-  });
+  }
+  document.getElementById("formulario-sushi").style.display = "block";
 }
 
-// Evitar cerrar accidentalmente
-window.addEventListener('beforeunload', function (e) {
-  e.preventDefault();
-  e.returnValue = '';
+function editarDato(articulo, nuevaCantidad, nuevoSolicito) {
+  const [_, solicitoActual] = datosCapturados[articulo].split('|');
+  const cantidadActual = datosCapturados[articulo].split('|')[0].trim();
+
+  const nuevaCantidadFinal = nuevaCantidad !== null ? nuevaCantidad : cantidadActual;
+  const nuevoSolicitoFinal = nuevoSolicito !== null ? (nuevoSolicito ? "Si" : "No") : solicitoActual.split(':')[1].trim();
+
+  datosCapturados[articulo] = `${nuevaCantidadFinal} | Solicito: ${nuevoSolicitoFinal}`;
+}
+
+function cancelarCaptura() {
+  if (confirm("¿Cancelar captura y regresar a inicio?")) {
+    window.location.href = "index.html";
+  }
+}
+
+// Enter = Continuar
+inputCantidad.addEventListener("keydown", function(e) {
+  if (e.key === "Enter") {
+    e.preventDefault();
+    capturarArticulo();
+  }
 });
 
+// Guardar todo el inventario
 document.getElementById("formulario-sushi").addEventListener("submit", async (e) => {
   e.preventDefault();
 
-  const mensaje = document.createElement("div");
-  mensaje.classList.add("mensaje");
-  document.body.appendChild(mensaje);
-
+  const mensaje = document.getElementById("mensaje");
   const datosUsuario = JSON.parse(localStorage.getItem("tempDatos"));
+
   if (!datosUsuario) {
     mensaje.style.color = "red";
     mensaje.textContent = "❌ No se encontraron los datos del usuario.";
     return;
   }
 
-  const datos = {};
-  datosCapturados.forEach(dato => {
-    datos[dato.articulo] = `${dato.cantidad} | Solicito: ${dato.solicito}`;
-  });
-
   try {
     if (datosUsuario.modoEdicion) {
       await fetch(`${server}/editar-nombre/${datosUsuario.id}`, {
         method: "PUT",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ articulos: datos, usuario: datosUsuario.usuario })
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({ articulos: datosCapturados, usuario: datosUsuario.usuario })
       });
     } else {
       await fetch(`${server}/guardar-nombre`, {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ ...datosUsuario, articulos: datos })
+        headers: {"Content-Type": "application/json"},
+        body: JSON.stringify({ ...datosUsuario, articulos: datosCapturados })
       });
     }
 
     mensaje.style.color = "green";
     mensaje.textContent = "✅ Inventario guardado exitosamente.";
     localStorage.removeItem("tempDatos");
-    localStorage.setItem("actualizarInventario", "true");
-    localStorage.setItem("actualizarCompras", "true");
-    window.removeEventListener('beforeunload', () => {});
-    setTimeout(() => window.close(), 1200);
 
+    // Actualizar automáticamente index, ver-nombres y compras
+    localStorage.setItem("actualizarInventario", "true");
+
+    setTimeout(() => window.location.href = "index.html", 1500);
   } catch (error) {
     console.error(error);
     mensaje.style.color = "red";
-    mensaje.textContent = "❌ Error al guardar el inventario.";
+    mensaje.textContent = "❌ Error al guardar inventario.";
   }
 });
 
-// Comienza a capturar inmediatamente
+// Iniciar
 mostrarModal();
 </script>
 
