--- a/public/caja.html
+++ b/public/caja.html
@@ -6,19 +6,17 @@
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; text-align: center; }
     h2 { margin-bottom: 20px; }
-    .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.5); text-align: center; padding-top: 80px; z-index: 1000; }
-    .modal-content { background: white; margin: auto; padding: 20px; border-radius: 10px; width: 350px; }
-    input[type="number"], label { margin: 10px; font-size: 16px; }
-    button { padding: 10px 20px; margin: 10px; font-size: 16px; border: none; border-radius: 5px; cursor: pointer; }
-    button.guardar { background-color: #28a745; color: white; }
-    button.guardar:hover { background-color: #218838; }
-    button.capturar { background-color: #3498db; color: white; }
-    button.capturar:hover { background-color: #2980b9; }
-    table { width: 90%; margin: auto; margin-top: 30px; border-collapse: collapse; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    th { background: #f2f2f2; }
+    table { width: 95%; margin: auto; border-collapse: collapse; font-size: 15px; }
+    th, td { padding: 8px; border: 1px solid #ccc; text-align: center; }
+    th { background-color: #f2f2f2; }
+    input[type="number"], input[type="text"] { width: 70px; padding: 5px; font-size: 14px; border-radius: 4px; border: 1px solid #ccc; }
+    button { margin: 10px; padding: 10px 20px; font-size: 15px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
+    button:hover { background-color: #218838; }
+    .mensaje { margin-top: 15px; font-size: 16px; }
     .footer { margin-top: 30px; font-size: 12px; color: gray; }
+    .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+             background: rgba(0, 0, 0, 0.5); text-align: center; padding-top: 80px; z-index: 1000; }
+    .modal-content { background: white; margin: auto; padding: 20px; border-radius: 10px; width: 300px; }
   </style>
 </head>
 <body>
@@ -28,25 +26,16 @@
 <div id="modal" class="modal">
   <div class="modal-content">
     <h3 id="nombre-articulo"></h3>
-    <input type="number" id="cantidad" placeholder="Cantidad" min="0" required><br>
+    <input type="number" id="cantidad" placeholder="Cantidad" required autocomplete="off"><br><br>
     <label><input type="checkbox" id="solicito"> Solicitó</label><br><br>
-    <button class="capturar" onclick="capturarDato()">Capturar</button>
+    <button onclick="guardarTemporal()">Guardar</button>
+    <button onclick="cancelarCaptura()">Cancelar</button>
   </div>
 </div>
 
-<form id="formulario-caja" style="display:none;">
-  <table>
-    <thead>
-      <tr>
-        <th>Artículo</th>
-        <th>Cantidad</th>
-        <th>Solicitó</th>
-      </tr>
-    </thead>
-    <tbody id="tabla-articulos"></tbody>
-  </table>
-  <button type="submit" class="guardar">Guardar Inventario</button>
-</form>
+<div id="contenido"></div>
+
+<div class="mensaje" id="mensaje"></div>
 
 <div class="footer">
   Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
@@ -62,79 +51,88 @@ const articulos = [
   "FABULOSO", "JABON", "ROLLO IMPRE"
 ];
 
-const server = "https://inventario-horom-production.up.railway.app";
+let indexActual = 0;
 let datosCapturados = [];
-let indexArticulo = 0;
-const modal = document.getElementById("modal");
-const nombreArticulo = document.getElementById("nombre-articulo");
-const cantidadInput = document.getElementById("cantidad");
-const solicitoCheck = document.getElementById("solicito");
-const tabla = document.getElementById("tabla-articulos");
+const server = "https://inventario-horom-production.up.railway.app";
 
 function mostrarModal() {
-  if (indexArticulo >= articulos.length) {
-    modal.style.display = "none";
-    document.getElementById("formulario-caja").style.display = "block";
-    cargarTabla();
-    return;
-  }
-  nombreArticulo.textContent = articulos[indexArticulo];
-  cantidadInput.value = "";
-  solicitoCheck.checked = false;
-  modal.style.display = "block";
+  document.getElementById("nombre-articulo").textContent = articulos[indexActual];
+  document.getElementById("cantidad").value = "";
+  document.getElementById("solicito").checked = false;
+  document.getElementById("modal").style.display = "block";
+  document.getElementById("cantidad").focus();
 }
 
-function capturarDato() {
-  const cantidad = cantidadInput.value.trim();
+function guardarTemporal() {
+  const cantidad = document.getElementById("cantidad").value.trim();
+  const solicito = document.getElementById("solicito").checked ? "Sí" : "No";
+
   if (cantidad === "") {
-    alert("❌ Debes capturar una cantidad antes de continuar.");
+    alert("❌ Ingresa una cantidad.");
     return;
   }
-  datosCapturados.push({
-    articulo: articulos[indexArticulo],
-    cantidad: cantidad,
-    solicito: solicitoCheck.checked ? "Sí" : "No"
-  });
-  indexArticulo++;
-  mostrarModal();
+
+  datosCapturados.push({ articulo: articulos[indexActual], cantidad, solicito });
+  indexActual++;
+
+  if (indexActual < articulos.length) {
+    mostrarModal();
+  } else {
+    document.getElementById("modal").style.display = "none";
+    mostrarTablaFinal();
+  }
 }
 
-function cargarTabla() {
-  tabla.innerHTML = "";
-  datosCapturados.forEach(dato => {
-    tabla.innerHTML += `
+function cancelarCaptura() {
+  if (confirm("¿Seguro que deseas cancelar la captura?")) {
+    window.location.href = "index.html";
+  }
+}
+
+function mostrarTablaFinal() {
+  let html = `
+    <form id="formulario-final">
+    <table>
+      <thead>
+        <tr><th>Artículo</th><th>Cantidad</th><th>Solicitó</th></tr>
+      </thead><tbody>`;
+
+  datosCapturados.forEach((dato, idx) => {
+    html += `
       <tr>
         <td>${dato.articulo}</td>
-        <td>${dato.cantidad}</td>
-        <td>${dato.solicito}</td>
+        <td><input type="number" value="${dato.cantidad}" id="cantidad-final-${idx}" required></td>
+        <td><input type="checkbox" id="solicito-final-${idx}" ${dato.solicito === "Sí" ? "checked" : ""}></td>
       </tr>
     `;
   });
+
+  html += `</tbody></table><br>
+    <button type="submit">Guardar Inventario</button>
+    <button type="button" onclick="cancelarCaptura()">Cancelar</button>
+    </form>`;
+
+  document.getElementById("contenido").innerHTML = html;
+
+  document.getElementById("formulario-final").addEventListener("submit", guardarInventario);
 }
 
-// Evitar cerrar accidentalmente
-window.addEventListener('beforeunload', function (e) {
+async function guardarInventario(e) {
   e.preventDefault();
-  e.returnValue = '';
-});
-
-document.getElementById("formulario-caja").addEventListener("submit", async (e) => {
-  e.preventDefault();
-
-  const mensaje = document.createElement("div");
-  mensaje.classList.add("mensaje");
-  document.body.appendChild(mensaje);
-
+  const mensaje = document.getElementById("mensaje");
   const datosUsuario = JSON.parse(localStorage.getItem("tempDatos"));
+
   if (!datosUsuario) {
     mensaje.style.color = "red";
-    mensaje.textContent = "❌ No se encontraron los datos del usuario.";
+    mensaje.textContent = "❌ No se encontraron datos de usuario.";
     return;
   }
 
   const datos = {};
-  datosCapturados.forEach(dato => {
-    datos[dato.articulo] = `${dato.cantidad} | Solicito: ${dato.solicito}`;
+  datosCapturados.forEach((dato, idx) => {
+    const cantidad = document.getElementById(`cantidad-final-${idx}`).value.trim();
+    const solicito = document.getElementById(`solicito-final-${idx}`).checked ? "Sí" : "No";
+    datos[dato.articulo] = `${cantidad} | Solicito: ${solicito}`;
   });
 
   try {
@@ -148,7 +146,10 @@ document.getElementById("formulario-caja").addEventListener("submit", async (e) 
       await fetch(`${server}/guardar-nombre`, {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ ...datosUsuario, articulos: datos })
+        body: JSON.stringify({
+          ...datosUsuario,
+          articulos: datos
+        })
       });
     }
 
@@ -158,16 +159,23 @@ document.getElementById("formulario-caja").addEventListener("submit", async (e) 
     localStorage.setItem("actualizarInventario", "true");
     localStorage.setItem("actualizarCompras", "true");
     window.removeEventListener('beforeunload', () => {});
-    setTimeout(() => window.close(), 1200);
+    setTimeout(() => window.location.href = "index.html", 1500);
 
   } catch (error) {
     console.error(error);
     mensaje.style.color = "red";
-    mensaje.textContent = "❌ Error al guardar el inventario.";
+    mensaje.textContent = "❌ Error al guardar.";
+  }
+}
+
+// Permitir avanzar presionando ENTER en el modal
+document.addEventListener("keydown", function(e) {
+  if (e.key === "Enter" && document.getElementById("modal").style.display === "block") {
+    e.preventDefault();
+    guardarTemporal();
   }
 });
 
-// Comienza inmediatamente
 mostrarModal();
 </script>
 
